# SEURoboCup2020

./: .gitignore  README.md  teams.cfg
docs/: os_install.md  ros.asc  ubuntu.md
src/common/: CMakeLists.txt  package.xml
src/common/include/common/: common.hpp
src/common/msg/: FieldData.msg  GameData.msg  HeadTask.msg  ImuData.msg  Player.msg
src/common/srv/: ImageSnap.srv
src/gamectrl/: CMakeLists.txt  package.xml
src/gamectrl/src/: ctrlwindow.cpp  ctrlwindow.hpp  gamectrl.cpp
src/libraries/basic_parser/: CMakeLists.txt  package.xml
src/libraries/basic_parser/include/basic_parser/: basic_parser.hpp
src/libraries/basic_parser/src/: basic_parser.cpp
src/libraries/seumath/: CMakeLists.txt  package.xml
src/motion/: CMakeLists.txt  motion_launch.py  package.xml
src/motion/src/: motion.cpp  services.cpp  services.hpp  subscribers.hpp
src/motion/src/walk/: WalkEngine.cpp  WalkEngine.hpp
src/params/: CMakeLists.txt  package.xml
src/params/conf/: config.conf
src/params/conf/action/: action.conf  walk.conf
src/params/src/: params.cpp
src/player/: CMakeLists.txt  package.xml  player_launch.py
src/player/src/: README.md  player.cpp  topics.hpp
src/seurobot/: CMakeLists.txt  package.xml
src/seurobot/include/seurobot/: action_engine.hpp  seu_robot.hpp
src/seurobot/src/: action_engine.cpp  seu_robot.cpp
src/simulation/controller/: CMakeLists.txt  controller_launch.py  package.xml
src/simulation/controller/src/: SimRobot.cpp  SimRobot.hpp  controller.cpp  supervisor.cpp
src/simulation/webots/: CMakeLists.txt  package.xml  webots_launch.py
src/start/: CMakeLists.txt  package.xml  start_launch.py
(+8 files in other folders)
